--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </div>
 
         <h2 class="date"></h2>
+        <p class="week"></p>
 
         <p class="name">❤️ Phi Thạch & Kim Huyền ❤️</p>
       </div>
@@ -121,7 +122,7 @@
 
       <footer>
         <h4>I Love You Chụt Chụt 😘</h4>
-        <p>12/02/2022</p>
+        <p class="dateEnd"></p>
       </footer>
     </div>
     <script src="./js/function.js"></script>
