render html with js

--- a/index.html
+++ b/index.html
@@ -43,71 +43,12 @@
       </div>
 
       <div class="album-container">
-        <div class="img-group">
+        <!-- <div class="img-group">
           <p class="title">Taipei Tea</p>
           <img
             src="./images/album/1B962FC2-FC59-4C67-82C7-1B1A2A0C9E47.JPG"
             alt="img"
           />
-        </div>
-
-        <div class="img-group">
-          <p class="title">Taipei Tea</p>
-          <img src="./images/album/IMG_8543.JPEG" alt="img" />
-        </div>
-
-        <div class="img-group">
-          <p class="title">Bờ đê</p>
-          <img src="./images/album/IMG_1486.JPEG" alt="img" />
-        </div>
-
-        <div class="img-group">
-          <p class="title">Nắm lấy cái tay</p>
-          <img src="./images/album/IMG_8550.JPG" alt="img" />
-        </div>
-
-        <div class="img-group">
-          <p class="title">Taipei Tea</p>
-          <img src="./images/album/taipei.jpg" alt="img" />
-        </div>
-
-        <div class="img-group">
-          <p class="title">Lẩu 9 tầng mây</p>
-          <img src="./images/album/IMG_8567.JPEG" alt="img" />
-        </div>
-
-        <div class="img-group">
-          <p class="title">Chả lụi</p>
-          <img src="./images/album/IMG_8645.JPEG" alt="img" />
-        </div>
-
-        <div class="img-group">
-          <p class="title">Mì cay Itada</p>
-          <img src="./images/album/itada.jpg" alt="img" />
-        </div>
-
-        <div class="img-group">
-          <p class="title">Mì cay Itada</p>
-          <img src="./images/album/itada-2.jpg" alt="img" />
-        </div>
-
-        <div class="img-group">
-          <p class="title">Cháo hàu</p>
-          <img src="./images/album/chao-hau.jpg" alt="img" />
-        </div>
-
-        <div class="img-group">
-          <p class="title">Mía Việt</p>
-          <img src="./images/album/mia-viet.jpg" alt="img" />
-        </div>
-
-        <div class="img-group">
-          <p class="title">Quà của bé yêu</p>
-          <video
-            src="./images/album/IMG_8648.mp4"
-            poster="./images/album/IMG_8648_thumb.jpeg"
-            controls
-          ></video>
         </div>
 
         <div class="img-group">
@@ -117,7 +58,7 @@
             poster="./images/album/1a5b77afabdd4226b3b266bba10aeaec_thumb.jpeg"
             controls
           ></video>
-        </div>
+        </div> -->
       </div>
 
       <footer>
@@ -125,6 +66,7 @@
         <p class="dateEnd"></p>
       </footer>
     </div>
-    <script src="./js/function.js"></script>
+    <script src="./js/date.js"></script>
+    <script src="./js/data.js"></script>
   </body>
 </html>
