--- a/index.html
+++ b/index.html
@@ -50,6 +50,40 @@
           />
         </svg>
       </div>
+
+      <div class="tool">
+        <div class="button btn-dark-mode">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-moon-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"
+            />
+          </svg>
+        </div>
+
+        <div class="button btn-minimize">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-arrow-right"
+            viewBox="0 0 16 16"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
+            />
+          </svg>
+        </div>
+      </div>
+
       <div class="heart-container">
         <div class="heart">
           <img src="./images/heart-2.gif" alt="heart" />
@@ -112,5 +146,6 @@
     <script src="./js/data.js"></script>
     <script src="./js/scroll-top.js"></script>
     <script src="./js/modal.js"></script>
+    <script src="./js/tool.js"></script>
   </body>
 </html>
