--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </svg>
       </div>
 
-      <div class="tool">
+      <div class="toolbar">
         <div class="button btn-dark-mode">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -82,6 +82,43 @@
             />
           </svg>
         </div>
+
+        <div
+          class="button btn-scroll-top"
+          onclick="
+          window.scrollTo({ top: 0, behavior: 'smooth' })
+        "
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-arrow-up-circle"
+            viewBox="0 0 16 16"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"
+            />
+          </svg>
+        </div>
+
+        <!-- <div class="button btn-maximize">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-arrow-left"
+            viewBox="0 0 16 16"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"
+            />
+          </svg>
+        </div> -->
       </div>
 
       <div class="heart-container">
@@ -130,6 +167,54 @@
         <div class="media">
           <!-- Javascript render media at here -->
         </div>
+
+        <div class="tools">
+          <div class="button zoom-in">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-zoom-in"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"
+              />
+              <path
+                d="M10.344 11.742c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1 6.538 6.538 0 0 1-1.398 1.4z"
+              />
+              <path
+                fill-rule="evenodd"
+                d="M6.5 3a.5.5 0 0 1 .5.5V6h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0V7H3.5a.5.5 0 0 1 0-1H6V3.5a.5.5 0 0 1 .5-.5z"
+              />
+            </svg>
+          </div>
+
+          <div class="button zoom-out">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-zoom-out"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"
+              />
+              <path
+                d="M10.344 11.742c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1 6.538 6.538 0 0 1-1.398 1.4z"
+              />
+              <path
+                fill-rule="evenodd"
+                d="M3 6.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"
+              />
+            </svg>
+          </div>
+        </div>
       </div>
 
       <footer>
@@ -139,13 +224,17 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script src="https://unpkg.com/draggabilly@3/dist/draggabilly.pkgd.min.js"></script>
+    <script type="module" src="./js/date.js"></script>
+    <script type="module" src="./js/render.js"></script>
     <script>
       new WOW().init();
+
+      // Drag image media
+      new Draggabilly(document.querySelector(".modal.full-image .media"));
     </script>
-    <script src="./js/date.js"></script>
-    <script src="./js/data.js"></script>
     <script src="./js/scroll-top.js"></script>
-    <script src="./js/modal.js"></script>
-    <script src="./js/tool.js"></script>
+    <script type="module" src="./js/modal.js"></script>
+    <script type="module" src="./js/tool.js"></script>
   </body>
 </html>
