--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
 
         <div class="tools">
-          <div class="button zoom-in">
+          <div class="button zoom-in" title="Phóng to">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -192,7 +192,7 @@
             </svg>
           </div>
 
-          <div class="button zoom-out">
+          <div class="button zoom-out" title="Thu nhỏ">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -214,6 +214,44 @@
               />
             </svg>
           </div>
+
+          <div class="button rotate-right" title="Xoay phải">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-arrow-clockwise"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"
+              />
+              <path
+                d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"
+              />
+            </svg>
+          </div>
+
+          <div class="button rotate-left" title="Xoay trái">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-arrow-counterclockwise"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"
+              />
+              <path
+                d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"
+              />
+            </svg>
+          </div>
         </div>
       </div>
 
@@ -231,7 +269,7 @@
       new WOW().init();
 
       // Drag image media
-      new Draggabilly(document.querySelector(".modal.full-image .media"));
+      // new Draggabilly(document.querySelector(".modal.full-image .media"));
     </script>
     <script src="./js/scroll-top.js"></script>
     <script type="module" src="./js/modal.js"></script>
