--- a/index.html
+++ b/index.html
@@ -148,6 +148,25 @@
         <!-- Javascript render list image at here -->
       </div>
 
+      <div class="load-more">
+        <button class="btn-load-more">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-arrow-down"
+            viewBox="0 0 16 16"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"
+            />
+          </svg>
+          <span class="text">Trang 2</span>
+        </button>
+      </div>
+
       <div class="modal full-image">
         <div class="btn">
           <svg
@@ -267,9 +286,6 @@
     <script type="module" src="./js/render.js"></script>
     <script>
       new WOW().init();
-
-      // Drag image media
-      // new Draggabilly(document.querySelector(".modal.full-image .media"));
     </script>
     <script src="./js/scroll-top.js"></script>
     <script type="module" src="./js/modal.js"></script>
