--- a/album.html
+++ b/album.html
@@ -59,6 +59,33 @@
           />
         </li>
       </ul>
+
+      <ul class="time-line">
+        <li class="time-line-item">
+          <div class="time">10:00 22/10/2022</div>
+          <div class="icon"></div>
+          <div class="desc">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Doloremque exercitationem eveniet odio molestiae, aut voluptates
+              dolore repellendus sit id nihil recusandae nesciunt consequuntur,
+              sunt officia sint hic ea quis sapiente.
+            </p>
+          </div>
+        </li>
+        <li class="time-line-item">
+          <div class="time">10:00 22/10/2022</div>
+          <div class="icon"></div>
+          <div class="desc">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Doloremque exercitationem eveniet odio molestiae, aut voluptates
+              dolore repellendus sit id nihil recusandae nesciunt consequuntur,
+              sunt officia sint hic ea quis sapiente.
+            </p>
+          </div>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
